Add bench rule. Use hyperfine to measure

--- a/make.config
+++ b/make.config
@@ -2,4 +2,7 @@ WASICC=../wasi-sdk-20.0/bin/clang
 WASICC_FLAGS=-O3
 WASM_OPT=wasm-opt
 WASMTIME=../../wasmtime/target/release/wasmtime
+WASMTIMEC=$(WASMTIME) compile
+WASMTIMEC_RUN=$(WASMTIME) --allow-precompiled
 WASM_INTERP=../../spec/interpreter/wasm
+HYPERFINE=hyperfine --warmup 5
