Update build infrastructure

--- a/fiber/Makefile
+++ b/fiber/Makefile
@@ -5,10 +5,10 @@ include ${CONFIG}
 all: example.wasm
 
 example.wasm: example.pre.wasm
-	$(WASM_OPT) -O --asyncify -o example.wasm example.pre.wasm
+	$(ASYNCIFY) -o example.wasm example.pre.wasm
 
-example.pre.wasm: example.c fiber.c fiber.h wasi-io.h
-	$(WASICC) $(WASICC_FLAGS) fiber.c example.c -o example.pre.wasm
+example.pre.wasm: example.c fiber_asyncify.c fiber.h wasi-io.h
+	$(WASICC) $(WASICC_FLAGS) fiber_asyncify.c example.c -o example.pre.wasm
 
 .PHONY: run
 run: example.wasm
