--- a/make.config
+++ b/make.config
@@ -1,8 +1,23 @@
+# WASI SDK C/C++ compiler
 WASICC=../wasi-sdk-20.0/bin/clang
 WASICC_FLAGS=-O3
+
+# Asyncify compiler from WABT
 WASM_OPT=wasm-opt
+ASYNCIFY=$(WASM_OPT) -O2 --asyncify --pass-arg=asyncify-ignore-imports
+
+# Wasmtime engine
 WASMTIME=../../wasmtime/target/release/wasmtime
 WASMTIMEC=$(WASMTIME) compile
 WASMTIMEC_RUN=$(WASMTIME) --allow-precompiled
+
+# WasmFX enabled Wasmtime engine
+WASMTIMEFX_FLAGS=--wasm-features=exceptions,function-references,typed-continuations
+WASMFXTIMEC=$(WASMTIMEC) $(WASMTIMEFX_FLAGS)
+WASMFXTIMEC_RUN=$(WASMTIMEC_RUN) $(WASMTIMEFX_FLAGS)
+
+# WasmFX reference interpreter
 WASM_INTERP=../../spec/interpreter/wasm
+
+# Hyperfine measurement tool
 HYPERFINE=hyperfine --warmup 5
