--- a/make.generic.config
+++ b/make.generic.config
@@ -35,6 +35,18 @@ bench: $(BENCHMARK)_bespoke.cwasm $(BENCHMARK)_asyncify.cwasm $(BENCHMARK)_wasmf
 benchfx: $(BENCHMARK)_asyncify.cwasm $(BENCHMARK)_wasmfx.cwasm
 	$(HYPERFINE) "$(WASMTIMEC_RUN) $(BENCHMARK)_asyncify.cwasm" "$(WASMFXTIMEC_RUN) $(BENCHMARK)_wasmfx.cwasm"
 
+.PHONY: grant-perf-privileges
+grant-perf-privileges:
+	sudo sysctl -w kernel.perf_event_paranoid=1
+
+.PHONY: revoke-perf-privileges
+revoke-perf-privileges:
+	sudo sysctl -w kernel.perf_event_paranoid=0
+
+.PHONY: perf-wasmfx
+perf-wasmfx: $(BENCHMARK)_wasmfx.cwasm
+	sudo perf record -k mono $(WASMFXTIMEC_RUN) --profile=perfmap $(BENCHMARK).cwasm
+
 .PHONY: clean
 clean:
 	rm -f $(BENCHMARK)_asyncify.pre.wasm $(BENCHMARK)_asyncify.wasm $(BENCHMARK)_bespoke.wasm $(BENCHMARK)_wasmfx.wasm
