--- a/make.generic.config
+++ b/make.generic.config
@@ -35,6 +35,11 @@ bench: $(BENCHMARK)_bespoke.cwasm $(BENCHMARK)_asyncify.cwasm $(BENCHMARK)_wasmf
 benchfx: $(BENCHMARK)_asyncify.cwasm $(BENCHMARK)_wasmfx.cwasm
 	$(HYPERFINE) "$(WASMTIMEC_RUN) $(BENCHMARK)_asyncify.cwasm" "$(WASMFXTIMEC_RUN) $(BENCHMARK)_wasmfx.cwasm"
 
+.PHONY: benchfx-mem
+benchfx-mem: $(BENCHMARK)_asyncify.cwasm $(BENCHMARK)_wasmfx.cwasm
+	/usr/bin/time -f 'asyncify: %M' $(WASMTIMEC_RUN) $(BENCHMARK)_asyncify.cwasm
+	/usr/bin/time -f '  wasmfx: %M' $(WASMFXTIMEC_RUN) $(BENCHMARK)_wasmfx.cwasm
+
 .PHONY: grant-perf-privileges
 grant-perf-privileges:
 	sudo sysctl -w kernel.perf_event_paranoid=1
