--- a/.gitignore
+++ b/.gitignore
@@ -58,7 +58,14 @@ dkms.conf
 # Temporaries
 *~
 \#*
+.\#*
 
-# Ignore local WASI installation
+# Ignore local installations
 wasi-sdk-20.0/
 wasi-sdk-20.0-linux.tar.gz
+binaryen-version_114/
+binaryen-version_114-x86_64-linux.tar.gz
+
+# Ignore legacy directories
+c/
+x64-effects/
