Add bench-mem rule to conduct memory experiments for bespoke, asyncify, and WasmFX.

--- a/make.generic.config
+++ b/make.generic.config
@@ -35,6 +35,12 @@ bench: $(BENCHMARK)_bespoke.cwasm $(BENCHMARK)_asyncify.cwasm $(BENCHMARK)_wasmf
 benchfx: $(BENCHMARK)_asyncify.cwasm $(BENCHMARK)_wasmfx.cwasm
 	$(HYPERFINE) "$(WASMTIMEC_RUN) $(BENCHMARK)_asyncify.cwasm" "$(WASMFXTIMEC_RUN) $(BENCHMARK)_wasmfx.cwasm"
 
+.PHONY: bench-mem
+bench-mem: $(BENCHMARK)_bespoke.cwasm $(BENCHMARK)_asyncify.cwasm $(BENCHMARK)_wasmfx.cwasm
+	/usr/bin/time -f ' bespoke: %M' $(WASMTIMEC_RUN) $(BENCHMARK)_bespoke.cwasm
+	/usr/bin/time -f 'asyncify: %M' $(WASMTIMEC_RUN) $(BENCHMARK)_asyncify.cwasm
+	/usr/bin/time -f '  wasmfx: %M' $(WASMFXTIMEC_RUN) $(BENCHMARK)_wasmfx.cwasm
+
 .PHONY: benchfx-mem
 benchfx-mem: $(BENCHMARK)_asyncify.cwasm $(BENCHMARK)_wasmfx.cwasm
 	/usr/bin/time -f 'asyncify: %M' $(WASMTIMEC_RUN) $(BENCHMARK)_asyncify.cwasm
