Fix perf-wasmfx rule

--- a/make.generic.config
+++ b/make.generic.config
@@ -56,7 +56,7 @@ revoke-perf-privileges:
 
 .PHONY: perf-wasmfx
 perf-wasmfx: $(BENCHMARK)_wasmfx.cwasm
-	sudo perf record -k mono $(WASMFXTIMEC_RUN) --profile=perfmap $(BENCHMARK).cwasm
+	sudo perf record -k mono $(WASMFXTIMEC_RUN) --profile=perfmap $(BENCHMARK)_wasmfx.cwasm
 
 .PHONY: clean
 clean:
