--- a/make.config
+++ b/make.config
@@ -1,3 +1,6 @@
+# Mimalloc (drop-in replacement for malloc)
+MIMALLOC=../mimalloc-2.1.2/release/out/libmimalloc.so
+
 # WASI SDK C/C++ compiler
 WASICC=../wasi-sdk-20.0/bin/clang
 WASICC_FLAGS=-O3
@@ -9,12 +12,12 @@ ASYNCIFY=$(WASM_OPT) -O2 --asyncify --pass-arg=asyncify-ignore-imports
 # Wasmtime engine
 WASMTIME=../../wasmtime/target/release/wasmtime
 WASMTIMEC=$(WASMTIME) compile
-WASMTIMEC_RUN=$(WASMTIME) --allow-precompiled
+WASMTIMEC_RUN=LD_PRELOAD=$(MIMALLOC) $(WASMTIME) --allow-precompiled
 
 # WasmFX enabled Wasmtime engine
 WASMTIMEFX_FLAGS=-W=exceptions,function-references,typed-continuations
 WASMFXTIMEC=$(WASMTIMEC) $(WASMTIMEFX_FLAGS)
-WASMFXTIMEC_RUN=$(WASMTIMEC_RUN) $(WASMTIMEFX_FLAGS)
+WASMFXTIMEC_RUN=LD_PRELOAD=$(MIMALLOC) $(WASMTIMEC_RUN) $(WASMTIMEFX_FLAGS)
 
 # WasmFX reference interpreter
 WASM_INTERP=../../spec/interpreter/wasm
