--- a/make.config
+++ b/make.config
@@ -10,7 +10,7 @@ WASM_OPT=../binaryen-version_116/bin/wasm-opt
 ASYNCIFY=$(WASM_OPT) -O2 --asyncify --pass-arg=asyncify-ignore-imports
 
 # Wasmtime engine
-WASMTIME=../../wasmtime/target/release/wasmtime
+WASMTIME=../wasmtime/target/release/wasmtime
 WASMTIMEC=$(WASMTIME) compile
 WASMTIMEC_RUN=LD_PRELOAD=$(MIMALLOC) $(WASMTIME) --allow-precompiled
 
@@ -20,7 +20,7 @@ WASMFXTIMEC=$(WASMTIMEC) $(WASMTIMEFX_FLAGS)
 WASMFXTIMEC_RUN=LD_PRELOAD=$(MIMALLOC) $(WASMTIMEC_RUN) $(WASMTIMEFX_FLAGS)
 
 # WasmFX reference interpreter
-WASM_INTERP=../../spec/interpreter/wasm
+WASM_INTERP=../spec/interpreter/wasm
 
 # Hyperfine measurement tool
 HYPERFINE=hyperfine --warmup 3
