Commit experimental changes

--- a/make.generic.config
+++ b/make.generic.config
@@ -20,9 +20,13 @@ $(BENCHMARK)_asyncify.cwasm: $(BENCHMARK)_asyncify.wasm
 
 ## TODO(dhil): Currently $(BENCHMARK)_wasmfx.wast is assembled by hand. We
 ## should have a tool do the assembling.
-$(BENCHMARK)_wasmfx.wasm: $(BENCHMARK)_wasmfx.wast
-	$(WASM_INTERP) -d -i $(BENCHMARK)_wasmfx.wast -o $(BENCHMARK)_wasmfx.wasm
-	chmod +x $(BENCHMARK)_wasmfx.wasm
+#$(BENCHMARK)_wasmfx.wasm: $(BENCHMARK)_wasmfx.wast
+#	$(WASM_INTERP) -d -i $(BENCHMARK)_wasmfx.wast -o $(BENCHMARK)_wasmfx.wasm
+#	chmod +x $(BENCHMARK)_wasmfx.wasm
+$(BENCHMARK)_wasmfx.wasm: $(BENCHMARK).c wasmfx_import.wast
+	$(WASICC) $(WASICC_FLAGS) -I ../fiber/ -o $(BENCHMARK)_wasmfx.pre.wasm $(BENCHMARK).c
+	$(WASM_INTERP) -d -i wasmfx_import.wast -o wasmfx_import.wasm
+	$(WASM_MERGE) --enable-typed-continuations wasmfx_import.wasm env $(BENCHMARK)_wasmfx.pre.wasm $(BENCHMARK) -o $(BENCHMARK).wasm
 
 $(BENCHMARK)_wasmfx.cwasm: $(BENCHMARK)_wasmfx.wasm
 	$(WASMFXTIMEC) -o $(BENCHMARK)_wasmfx.cwasm $(BENCHMARK)_wasmfx.wasm
