--- a/make.config
+++ b/make.config
@@ -6,8 +6,12 @@ WASICC=../wasi-sdk-20.0/bin/clang
 WASICC_FLAGS=-O3
 
 # Asyncify compiler from WABT
-WASM_OPT=../binaryen-version_116/bin/wasm-opt
+#WASM_OPT=../binaryen-version_116/bin/wasm-opt
+WASM_OPT=../binaryenfx/bin/wasm-opt
 ASYNCIFY=$(WASM_OPT) -O2 --asyncify --pass-arg=asyncify-ignore-imports
+
+# Wasm module merger
+WASM_MERGE=../binaryenfx/bin/wasm-merge
 
 # Wasmtime engine
 WASMTIME=../wasmtime/target/release/wasmtime
