Update wasmfx stubs to be compatible with wasm-merge

--- a/make.config
+++ b/make.config
@@ -12,6 +12,7 @@ ASYNCIFY=$(WASM_OPT) -O2 --asyncify --pass-arg=asyncify-ignore-imports
 
 # Wasm module merger
 WASM_MERGE=../binaryenfx/bin/wasm-merge
+WASMFX_MERGE=$(WASM_MERGE) --enable-exception-handling --enable-reference-types --enable-multivalue --enable-gc --enable-typed-continuations
 
 # Wasmtime engine
 WASMTIME=../wasmtime/target/release/wasmtime
