--- a/make.generic.config
+++ b/make.generic.config
@@ -26,7 +26,7 @@ $(BENCHMARK)_asyncify.cwasm: $(BENCHMARK)_asyncify.wasm
 $(BENCHMARK)_wasmfx.wasm: $(BENCHMARK).c wasmfx_import.wast
 	$(WASICC) $(WASICC_FLAGS) -I ../fiber/ -o $(BENCHMARK)_wasmfx.pre.wasm $(BENCHMARK).c
 	$(WASM_INTERP) -d -i wasmfx_import.wast -o wasmfx_import.wasm
-	$(WASM_MERGE) --enable-typed-continuations wasmfx_import.wasm env $(BENCHMARK)_wasmfx.pre.wasm $(BENCHMARK) -o $(BENCHMARK).wasm
+	$(WASMFX_MERGE) wasmfx_import.wasm env $(BENCHMARK)_wasmfx.pre.wasm $(BENCHMARK) -o $(BENCHMARK)_wasmfx.wasm
 
 $(BENCHMARK)_wasmfx.cwasm: $(BENCHMARK)_wasmfx.wasm
 	$(WASMFXTIMEC) -o $(BENCHMARK)_wasmfx.cwasm $(BENCHMARK)_wasmfx.wasm
