make clean also removes wasmfx_import.wasm now

--- a/make.generic.config
+++ b/make.generic.config
@@ -64,5 +64,6 @@ perf-wasmfx: $(BENCHMARK)_wasmfx.cwasm
 
 .PHONY: clean
 clean:
+	rm -f wasmfx_import.wasm
 	rm -f $(BENCHMARK)_asyncify.pre.wasm $(BENCHMARK)_asyncify.wasm $(BENCHMARK)_bespoke.wasm $(BENCHMARK)_wasmfx.wasm
 	rm -f $(BENCHMARK)_asyncify.cwasm $(BENCHMARK)_bespoke.cwasm $(BENCHMARK)_wasmfx.cwasm
