Set up the basic infrastructure for using wasm-opt on WasmFX programs

--- a/make.config
+++ b/make.config
@@ -8,7 +8,9 @@ WASICC_FLAGS=-O3
 # Asyncify compiler from WABT
 #WASM_OPT=../binaryen-version_116/bin/wasm-opt
 WASM_OPT=../binaryenfx/bin/wasm-opt
-ASYNCIFY=$(WASM_OPT) -O2 --asyncify --pass-arg=asyncify-ignore-imports
+WASM_OPT_FLAGS=-O2
+WASMFX_OPT=$(WASM_OPT) $(WASM_OPT_FLAGS) --enable-exception-handling --enable-reference-types --enable-multivalue --enable-gc --enable-typed-continuations
+ASYNCIFY=$(WASM_OPT) $(WASM_OPT_FLAGS) --asyncify --pass-arg=asyncify-ignore-imports
 
 # Wasm module merger
 WASM_MERGE=../binaryenfx/bin/wasm-merge
