--- a/make.generic.config
+++ b/make.generic.config
@@ -21,7 +21,8 @@ $(BENCHMARK)_asyncify.cwasm: $(BENCHMARK)_asyncify.wasm
 $(BENCHMARK)_wasmfx.wasm: $(BENCHMARK).c wasmfx_import.wast
 	$(WASICC) $(WASICC_FLAGS) -I ../fiber/ -o $(BENCHMARK)_wasmfx.pre.wasm $(BENCHMARK).c
 	$(WASM_INTERP) -d -i wasmfx_import.wast -o wasmfx_import.wasm
-	$(WASMFX_MERGE) wasmfx_import.wasm env $(BENCHMARK)_wasmfx.pre.wasm $(BENCHMARK) -o $(BENCHMARK)_wasmfx.wasm
+	$(WASMFX_MERGE) wasmfx_import.wasm env $(BENCHMARK)_wasmfx.pre.wasm $(BENCHMARK) -o $(BENCHMARK)_wasmfx-merged.wasm
+	mv $(BENCHMARK)_wasmfx-merged.wasm $(BENCHMARK)_wasmfx.wasm # TODO(dhil): use wasm-opt once it supports WasmFX instructions.
 
 $(BENCHMARK)_wasmfx.cwasm: $(BENCHMARK)_wasmfx.wasm
 	$(WASMFXTIMEC) -o $(BENCHMARK)_wasmfx.cwasm $(BENCHMARK)_wasmfx.wasm
@@ -60,5 +61,5 @@ perf-wasmfx: $(BENCHMARK)_wasmfx.cwasm
 .PHONY: clean
 clean:
 	rm -f wasmfx_import.wasm
-	rm -f $(BENCHMARK)_asyncify.pre.wasm $(BENCHMARK)_asyncify.wasm $(BENCHMARK)_bespoke.wasm $(BENCHMARK)_wasmfx.wasm
+	rm -f $(BENCHMARK)_asyncify.pre.wasm $(BENCHMARK)_asyncify.wasm $(BENCHMARK)_bespoke.wasm $(BENCHMARK)_wasmfx.wasm $(BENCHMARK)_wasmfx-merged.wasm
 	rm -f $(BENCHMARK)_asyncify.cwasm $(BENCHMARK)_bespoke.cwasm $(BENCHMARK)_wasmfx.cwasm
