Streamline module naming

--- a/make.generic.config
+++ b/make.generic.config
@@ -21,7 +21,7 @@ $(BENCHMARK)_asyncify.cwasm: $(BENCHMARK)_asyncify.wasm
 $(BENCHMARK)_wasmfx.wasm: $(BENCHMARK).c wasmfx_import.wast
 	$(WASICC) $(WASICC_FLAGS) -I ../fiber/ -o $(BENCHMARK)_wasmfx.pre.wasm $(BENCHMARK).c
 	$(WASM_INTERP) -d -i wasmfx_import.wast -o wasmfx_import.wasm
-	$(WASMFX_MERGE) wasmfx_import.wasm env $(BENCHMARK)_wasmfx.pre.wasm $(BENCHMARK) -o $(BENCHMARK)_wasmfx-merged.wasm
+	$(WASMFX_MERGE) wasmfx_import.wasm "impl" $(BENCHMARK)_wasmfx.pre.wasm "benchmark" -o $(BENCHMARK)_wasmfx-merged.wasm
 	mv $(BENCHMARK)_wasmfx-merged.wasm $(BENCHMARK)_wasmfx.wasm # TODO(dhil): use wasm-opt once it supports WasmFX instructions.
 
 $(BENCHMARK)_wasmfx.cwasm: $(BENCHMARK)_wasmfx.wasm
