Add enable-bulk-memory flag when using wabt on WasmFX programs.

--- a/make.config
+++ b/make.config
@@ -5,16 +5,21 @@ MIMALLOC=../mimalloc-2.1.2/release/out/libmimalloc.so
 WASICC=../wasi-sdk-20.0/bin/clang
 WASICC_FLAGS=-O3
 
-# Asyncify compiler from WABT
+# Wabt
+WABTFX_FLAGS=--enable-exception-handling --enable-reference-types --enable-multivalue --enable-bulk-memory --enable-gc --enable-typed-continuations
+
+## Wasm optimiser
 #WASM_OPT=../binaryen-version_116/bin/wasm-opt
 WASM_OPT=../binaryenfx/bin/wasm-opt
 WASM_OPT_FLAGS=-O2
-WASMFX_OPT=$(WASM_OPT) $(WASM_OPT_FLAGS) --enable-exception-handling --enable-reference-types --enable-multivalue --enable-gc --enable-typed-continuations
+WASMFX_OPT=$(WASM_OPT) $(WASM_OPT_FLAGS) $(WABTFX_FLAGS)
+
+## Asyncify compiler from WABT
 ASYNCIFY=$(WASM_OPT) $(WASM_OPT_FLAGS) --asyncify --pass-arg=asyncify-ignore-imports
 
-# Wasm module merger
+## Wasm module merger
 WASM_MERGE=../binaryenfx/bin/wasm-merge
-WASMFX_MERGE=$(WASM_MERGE) --enable-exception-handling --enable-reference-types --enable-multivalue --enable-gc --enable-typed-continuations
+WASMFX_MERGE=$(WASM_MERGE) $(WABTFX_FLAGS)
 
 # Wasmtime engine
 WASMTIME=../wasmtime/target/release/wasmtime
