--- a/make.config
+++ b/make.config
@@ -18,7 +18,7 @@ WASMFX_OPT=$(WASM_OPT) $(WASM_OPT_FLAGS) $(WABTFX_FLAGS)
 ASYNCIFY=$(WASM_OPT) $(WASM_OPT_FLAGS) --asyncify --pass-arg=asyncify-ignore-imports
 
 ## Wasm module merger
-WASM_MERGE=../binaryenfx/bin/wasm-merge
+WASM_MERGE?=../binaryenfx/bin/wasm-merge
 WASMFX_MERGE=$(WASM_MERGE) $(WABTFX_FLAGS)
 
 # Wasmtime engine
@@ -32,7 +32,7 @@ WASMFXTIMEC=$(WASMTIMEC) $(WASMTIMEFX_FLAGS)
 WASMFXTIMEC_RUN=$(WASMTIMEC_RUN) $(WASMTIMEFX_FLAGS)
 
 # WasmFX reference interpreter
-WASM_INTERP=../spec/interpreter/wasm
+WASM_INTERP?=../spec/interpreter/wasm
 
 # Hyperfine measurement tool
 HYPERFINE=hyperfine --warmup 3
