--- a/make.config
+++ b/make.config
@@ -10,7 +10,7 @@ WABTFX_FLAGS=--enable-exception-handling --enable-reference-types --enable-multi
 
 ## Wasm optimiser
 #WASM_OPT=../binaryen-version_116/bin/wasm-opt
-WASM_OPT=../binaryenfx/bin/wasm-opt
+WASM_OPT?=../binaryenfx/bin/wasm-opt
 WASM_OPT_FLAGS=-O2
 WASMFX_OPT=$(WASM_OPT) $(WASM_OPT_FLAGS) $(WABTFX_FLAGS)
 
