Configure red zone size.

--- a/make.config
+++ b/make.config
@@ -1,5 +1,5 @@
 # Default stack size
-DEFAULT_STACK_SIZE=36000
+DEFAULT_STACK_SIZE=4096
 
 # Mimalloc (drop-in replacement for malloc)
 MIMALLOC=../mimalloc-2.1.2/release/out/libmimalloc.so
@@ -26,7 +26,7 @@ WASMFX_MERGE=$(WASM_MERGE) $(WABTFX_FLAGS)
 # Wasmtime engine
 WASMTIME=../wasmtime/target/release/wasmtime
 WASMTIMEC=$(WASMTIME) compile
-WASMTIMEC_RUN=LD_PRELOAD=$(MIMALLOC) $(WASMTIME) --allow-precompiled -Wwasmfx-stack-size=$(DEFAULT_STACK_SIZE)
+WASMTIMEC_RUN=LD_PRELOAD=$(MIMALLOC) $(WASMTIME) --allow-precompiled -Wwasmfx-stack-size=$(DEFAULT_STACK_SIZE) -Wwasmfx-red-zone-size=0
 
 # WasmFX enabled Wasmtime engine
 WASMTIMEFX_FLAGS=-W=exceptions,function-references,typed-continuations
