--- a/make.config
+++ b/make.config
@@ -9,12 +9,21 @@ WASICC?=../wasi-sdk-22.0/bin/clang
 WASICC_FLAGS=--std=c17 -O3 -Wall -Wextra -Werror -DDEFAULT_STACK_SIZE=$(DEFAULT_STACK_SIZE)
 
 # Wabt
-WABTFX_FLAGS=--enable-exception-handling --enable-reference-types --enable-multivalue --enable-bulk-memory --enable-gc --enable-typed-continuations
+WABTFX_FLAGS=--enable-multimemory --enable-exception-handling --enable-reference-types --enable-multivalue --enable-bulk-memory --enable-gc --enable-typed-continuations
 
 ## Wasm optimiser
 WASM_OPT?=../binaryenfx/bin/wasm-opt
-WASM_OPT_FLAGS=-O2
+WASM_OPT_FLAGS=--inlining-optimizing --inlining
 WASMFX_OPT=$(WASM_OPT) $(WASM_OPT_FLAGS) $(WABTFX_FLAGS)
+
+
+# Binaryen IR text format assembler
+WASM_AS?=../binaryenfx/bin/wasm-as
+WASMFX_AS=$(WASM_AS) $(WABTFX_FLAGS)
+
+# Binaryen IR text format disassembler
+WASM_DIS?=../binaryenfx/bin/wasm-dis
+WASMFX_DIS=$(WASM_DIS) $(WABTFX_FLAGS)
 
 ## Asyncify compiler from WABT
 ASYNCIFY=$(WASM_OPT) $(WASM_OPT_FLAGS) --asyncify --pass-arg=asyncify-ignore-imports
