--- a/make.generic.config
+++ b/make.generic.config
@@ -27,6 +27,27 @@ out/$(BENCHMARK)_wasmfx.wasm: $(BENCHMARK).c wasmfx_import.wast
 	$(WASMFX_MERGE) out/wasmfx_import.wasm "impl" out/$(BENCHMARK)_wasmfx.pre.wasm "benchmark" -o out/$(BENCHMARK)_wasmfx-merged.wasm
 	mv out/$(BENCHMARK)_wasmfx-merged.wasm out/$(BENCHMARK)_wasmfx.wasm # TODO(dhil): use wasm-opt once it supports WasmFX instructions.
 
+out/$(BENCHMARK)_wasmfx_fiber.wasm: $(BENCHMARK).c
+    # Custom flags to wasm-ld:
+	# --export-table: Exports the funcref table. This forces clang to populate it and not optimize it away
+	# --export-memory: Export the memory, so that the fiber_wasmfx_imports.wat can import it, creating one unified heap.
+	$(WASICC) $(WASICC_FLAGS) -Wl,--export-table,--export-memory -I ../fiber/ -o out/$(BENCHMARK)_wasmfx_fiber.pre.wasm  ../fiber/fiber_wasmfx.c asyncify.c $(BENCHMARK).c
+
+	# For debugging: create binaryen compatible wat for wasm
+	$(WASMFX_DIS) out/$(BENCHMARK)_wasmfx_fiber.pre.wasm -o out/$(BENCHMARK)_wasmfx_fiber.pre.wat
+
+	$(WASM_INTERP) -d -i ../fiber/fiber_wasmfx_imports.wat -o out/fiber_wasmfx_imports.wasm
+	$(WASMFX_MERGE) out/fiber_wasmfx_imports.wasm "fiber_wasmfx_imports" out/$(BENCHMARK)_wasmfx_fiber.pre.wat "benchmark" -o out/$(BENCHMARK)_wasmfx.merged.wasm
+
+	# # for debugging: create binaryen compatible wat for wasm
+	# $(WASMFX_DIS) out/$(BENCHMARK)_wasmfx.merged.wasm -o out/$(BENCHMARK)_wasmfx.merged.wat
+
+	# # for debugging: create ref interpreter compatible wat for wasm
+	$(WASM_INTERP) -d -i out/$(BENCHMARK)_wasmfx.merged.wasm -o out/$(BENCHMARK)_wasmfx.merged.refint.wat
+
+	cp out/$(BENCHMARK)_wasmfx.merged.wasm out/$(BENCHMARK)_wasmfx_fiber.wasm
+	# TODO(dhil): use wasm-opt once it supports WasmFX instructions.
+
 out/$(BENCHMARK)_wasmfx.cwasm: out/$(BENCHMARK)_wasmfx.wasm
 	$(WASMFXTIMEC) -o out/$(BENCHMARK)_wasmfx.cwasm out/$(BENCHMARK)_wasmfx.wasm
 
