--- a/make.config
+++ b/make.config
@@ -5,14 +5,14 @@ DEFAULT_STACK_SIZE=4096
 MIMALLOC=../mimalloc-2.1.2/release/out/libmimalloc.so
 
 # WASI SDK C/C++ compiler
-WASICC=../wasi-sdk-21.0/bin/clang
+WASICC?=../wasi-sdk-21.0/bin/clang
 WASICC_FLAGS=-O3 -DDEFAULT_STACK_SIZE=$(DEFAULT_STACK_SIZE)
 
 # Wabt
 WABTFX_FLAGS=--enable-exception-handling --enable-reference-types --enable-multivalue --enable-bulk-memory --enable-gc --enable-typed-continuations
 
 ## Wasm optimiser
-WASM_OPT=../binaryenfx/bin/wasm-opt
+WASM_OPT?=../binaryenfx/bin/wasm-opt
 WASM_OPT_FLAGS=-O2
 WASMFX_OPT=$(WASM_OPT) $(WASM_OPT_FLAGS) $(WABTFX_FLAGS)
 
@@ -20,7 +20,7 @@ WASMFX_OPT=$(WASM_OPT) $(WASM_OPT_FLAGS) $(WABTFX_FLAGS)
 ASYNCIFY=$(WASM_OPT) $(WASM_OPT_FLAGS) --asyncify --pass-arg=asyncify-ignore-imports
 
 ## Wasm module merger
-WASM_MERGE=../binaryenfx/bin/wasm-merge
+WASM_MERGE?=../binaryenfx/bin/wasm-merge
 WASMFX_MERGE=$(WASM_MERGE) $(WABTFX_FLAGS)
 
 # Wasmtime engine
@@ -34,7 +34,7 @@ WASMFXTIMEC=$(WASMTIMEC) $(WASMTIMEFX_FLAGS)
 WASMFXTIMEC_RUN=$(WASMTIMEC_RUN) $(WASMTIMEFX_FLAGS)
 
 # WasmFX reference interpreter
-WASM_INTERP=../spec/interpreter/wasm
+WASM_INTERP?=../spec/interpreter/wasm
 
 # Hyperfine measurement tool
 HYPERFINE=hyperfine --warmup 3
