fix compilation of *_bespoke.cwasm

--- a/make.generic.config
+++ b/make.generic.config
@@ -10,7 +10,7 @@ out/$(BENCHMARK)_bespoke.wasm: $(BENCHMARK)_bespoke.c
 	$(WASICC) $(WASICC_FLAGS) -o out/$(BENCHMARK)_bespoke.wasm $(BENCHMARK)_bespoke.c
 
 out/$(BENCHMARK)_bespoke.cwasm: out/$(BENCHMARK)_bespoke.wasm
-	$(WASMTIMEC) -o out/$(BENCHMARK)_bespoke.cwasm $(BENCHMARK)_bespoke.wasm
+	$(WASMTIMEC) -o out/$(BENCHMARK)_bespoke.cwasm out/$(BENCHMARK)_bespoke.wasm
 
 out/$(BENCHMARK)_asyncify.wasm: $(BENCHMARK).c asyncify.c
 	mkdir -p out
