--- a/make.generic.config
+++ b/make.generic.config
@@ -22,7 +22,7 @@ out/$(BENCHMARK)_asyncify.cwasm: out/$(BENCHMARK)_asyncify.wasm
 
 out/$(BENCHMARK)_wasmfx.wasm: $(BENCHMARK).c wasmfx_import.wast
 	mkdir -p out
-	$(WASICC) $(WASICC_FLAGS) -I ../fiber/ -o out/$(BENCHMARK)_wasmfx.pre.wasm $(BENCHMARK).c
+	$(WASICC) $(WASICC_FLAGS) -I ../fiber/ -o out/$(BENCHMARK)_wasmfx.pre.wasm ../fiber/fiber_wasmfx_compat.c $(BENCHMARK).c
 	$(WASM_INTERP) -d -i wasmfx_import.wast -o out/wasmfx_import.wasm
 	$(WASMFX_MERGE) out/wasmfx_import.wasm "impl" out/$(BENCHMARK)_wasmfx.pre.wasm "benchmark" -o out/$(BENCHMARK)_wasmfx-merged.wasm
 	mv out/$(BENCHMARK)_wasmfx-merged.wasm out/$(BENCHMARK)_wasmfx.wasm # TODO(dhil): use wasm-opt once it supports WasmFX instructions.
