fix _wasmfx_fiber building: need to mkdir out

--- a/make.generic.config
+++ b/make.generic.config
@@ -28,7 +28,8 @@ out/$(BENCHMARK)_wasmfx.wasm: $(BENCHMARK).c wasmfx_import.wast
 	mv out/$(BENCHMARK)_wasmfx-merged.wasm out/$(BENCHMARK)_wasmfx.wasm # TODO(dhil): use wasm-opt once it supports WasmFX instructions.
 
 out/$(BENCHMARK)_wasmfx_fiber.wasm: $(BENCHMARK).c
-    # Custom flags to wasm-ld:
+	mkdir -p out
+	# Custom flags to wasm-ld:
 	# --export-table: Exports the funcref table. This forces clang to populate it and not optimize it away
 	# --export-memory: Export the memory, so that the fiber_wasmfx_imports.wat can import it, creating one unified heap.
 	$(WASICC) $(WASICC_FLAGS) -Wl,--export-table,--export-memory -I ../fiber/ -o out/$(BENCHMARK)_wasmfx_fiber.pre.wasm  ../fiber/fiber_wasmfx.c asyncify.c $(BENCHMARK).c
