--- a/make.config
+++ b/make.config
@@ -6,7 +6,7 @@ MIMALLOC=../mimalloc-2.1.2/release/out/libmimalloc.so
 
 # WASI SDK C/C++ compiler
 WASICC?=../wasi-sdk-22.0/bin/clang
-WASICC_FLAGS=-O3 -Wall -Wextra -Werror -DDEFAULT_STACK_SIZE=$(DEFAULT_STACK_SIZE)
+WASICC_FLAGS=--std=c17 -O3 -Wall -Wextra -Werror -DDEFAULT_STACK_SIZE=$(DEFAULT_STACK_SIZE)
 
 # Wabt
 WABTFX_FLAGS=--enable-exception-handling --enable-reference-types --enable-multivalue --enable-bulk-memory --enable-gc --enable-typed-continuations
