Small compilation tweaks (#3)

--- a/make.generic.config
+++ b/make.generic.config
@@ -3,48 +3,51 @@ CONFIG=../make.config
 include ${CONFIG}
 
 .PHONY: all
-all: $(BENCHMARK)_bespoke.cwasm $(BENCHMARK)_asyncify.cwasm $(BENCHMARK)_wasmfx.cwasm
+all: out/$(BENCHMARK)_bespoke.cwasm out/$(BENCHMARK)_asyncify.cwasm out/$(BENCHMARK)_wasmfx.cwasm
 
-$(BENCHMARK)_bespoke.wasm: $(BENCHMARK)_bespoke.c
-	$(WASICC) $(WASICC_FLAGS) -o $(BENCHMARK)_bespoke.wasm $(BENCHMARK)_bespoke.c
+out/$(BENCHMARK)_bespoke.wasm: $(BENCHMARK)_bespoke.c
+	mkdir -p out
+	$(WASICC) $(WASICC_FLAGS) -o out/$(BENCHMARK)_bespoke.wasm $(BENCHMARK)_bespoke.c
 
-$(BENCHMARK)_bespoke.cwasm: $(BENCHMARK)_bespoke.wasm
-	$(WASMTIMEC) -o $(BENCHMARK)_bespoke.cwasm $(BENCHMARK)_bespoke.wasm
+out/$(BENCHMARK)_bespoke.cwasm: out/$(BENCHMARK)_bespoke.wasm
+	$(WASMTIMEC) -o out/$(BENCHMARK)_bespoke.cwasm out/$(BENCHMARK)_bespoke.wasm
 
-$(BENCHMARK)_asyncify.wasm: $(BENCHMARK).c asyncify.c
-	$(WASICC) $(WASICC_FLAGS) -I ../fiber/ -o $(BENCHMARK)_asyncify.pre.wasm ../fiber/fiber_asyncify.c asyncify.c $(BENCHMARK).c
-	$(ASYNCIFY) $(BENCHMARK)_asyncify.pre.wasm -o $(BENCHMARK)_asyncify.wasm
+out/$(BENCHMARK)_asyncify.wasm: $(BENCHMARK).c asyncify.c
+	mkdir -p out
+	$(WASICC) $(WASICC_FLAGS) -I ../fiber/ -o out/$(BENCHMARK)_asyncify.pre.wasm ../fiber/fiber_asyncify.c asyncify.c $(BENCHMARK).c
+	$(ASYNCIFY) out/$(BENCHMARK)_asyncify.pre.wasm -o out/$(BENCHMARK)_asyncify.wasm
 
-$(BENCHMARK)_asyncify.cwasm: $(BENCHMARK)_asyncify.wasm
-	$(WASMTIMEC) -o $(BENCHMARK)_asyncify.cwasm $(BENCHMARK)_asyncify.wasm
+out/$(BENCHMARK)_asyncify.cwasm: out/$(BENCHMARK)_asyncify.wasm
+	$(WASMTIMEC) -o out/$(BENCHMARK)_asyncify.cwasm out/$(BENCHMARK)_asyncify.wasm
 
-$(BENCHMARK)_wasmfx.wasm: $(BENCHMARK).c wasmfx_import.wast
-	$(WASICC) $(WASICC_FLAGS) -I ../fiber/ -o $(BENCHMARK)_wasmfx.pre.wasm $(BENCHMARK).c
-	$(WASM_INTERP) -d -i wasmfx_import.wast -o wasmfx_import.wasm
-	$(WASMFX_MERGE) wasmfx_import.wasm "impl" $(BENCHMARK)_wasmfx.pre.wasm "benchmark" -o $(BENCHMARK)_wasmfx-merged.wasm
-	mv $(BENCHMARK)_wasmfx-merged.wasm $(BENCHMARK)_wasmfx.wasm # TODO(dhil): use wasm-opt once it supports WasmFX instructions.
+out/$(BENCHMARK)_wasmfx.wasm: $(BENCHMARK).c wasmfx_import.wast
+	mkdir -p out
+	$(WASICC) $(WASICC_FLAGS) -I ../fiber/ -o out/$(BENCHMARK)_wasmfx.pre.wasm $(BENCHMARK).c
+	$(WASM_INTERP) -d -i wasmfx_import.wast -o out/wasmfx_import.wasm
+	$(WASMFX_MERGE) out/wasmfx_import.wasm "impl" out/$(BENCHMARK)_wasmfx.pre.wasm "benchmark" -o out/$(BENCHMARK)_wasmfx-merged.wasm
+	mv out/$(BENCHMARK)_wasmfx-merged.wasm out/$(BENCHMARK)_wasmfx.wasm # TODO(dhil): use wasm-opt once it supports WasmFX instructions.
 
-$(BENCHMARK)_wasmfx.cwasm: $(BENCHMARK)_wasmfx.wasm
-	$(WASMFXTIMEC) -o $(BENCHMARK)_wasmfx.cwasm $(BENCHMARK)_wasmfx.wasm
+out/$(BENCHMARK)_wasmfx.cwasm: out/$(BENCHMARK)_wasmfx.wasm
+	$(WASMFXTIMEC) -o out/$(BENCHMARK)_wasmfx.cwasm out/$(BENCHMARK)_wasmfx.wasm
 
 .PHONY: bench
-bench: $(BENCHMARK)_bespoke.cwasm $(BENCHMARK)_asyncify.cwasm $(BENCHMARK)_wasmfx.cwasm
-	$(HYPERFINE) "$(WASMTIMEC_RUN) $(BENCHMARK)_bespoke.cwasm" "$(WASMTIMEC_RUN) $(BENCHMARK)_asyncify.cwasm" "$(WASMFXTIMEC_RUN) $(BENCHMARK)_wasmfx.cwasm"
+bench: out/$(BENCHMARK)_bespoke.cwasm out/$(BENCHMARK)_asyncify.cwasm out/$(BENCHMARK)_wasmfx.cwasm
+	$(HYPERFINE) "$(WASMTIMEC_RUN) out/$(BENCHMARK)_bespoke.cwasm" "$(WASMTIMEC_RUN) out/$(BENCHMARK)_asyncify.cwasm" "$(WASMFXTIMEC_RUN) out/$(BENCHMARK)_wasmfx.cwasm"
 
 .PHONY: benchfx
-benchfx: $(BENCHMARK)_asyncify.cwasm $(BENCHMARK)_wasmfx.cwasm
-	$(HYPERFINE) "$(WASMTIMEC_RUN) $(BENCHMARK)_asyncify.cwasm" "$(WASMFXTIMEC_RUN) $(BENCHMARK)_wasmfx.cwasm"
+benchfx: out/$(BENCHMARK)_asyncify.cwasm out/$(BENCHMARK)_wasmfx.cwasm
+	$(HYPERFINE) "$(WASMTIMEC_RUN) out/$(BENCHMARK)_asyncify.cwasm" "$(WASMFXTIMEC_RUN) out/$(BENCHMARK)_wasmfx.cwasm"
 
 .PHONY: bench-mem
-bench-mem: $(BENCHMARK)_bespoke.cwasm $(BENCHMARK)_asyncify.cwasm $(BENCHMARK)_wasmfx.cwasm
-	/usr/bin/time -f ' bespoke: %M' $(WASMTIMEC_RUN) $(BENCHMARK)_bespoke.cwasm
-	/usr/bin/time -f 'asyncify: %M' $(WASMTIMEC_RUN) $(BENCHMARK)_asyncify.cwasm
-	/usr/bin/time -f '  wasmfx: %M' $(WASMFXTIMEC_RUN) $(BENCHMARK)_wasmfx.cwasm
+bench-mem: out/$(BENCHMARK)_bespoke.cwasm out/$(BENCHMARK)_asyncify.cwasm out/$(BENCHMARK)_wasmfx.cwasm
+	/usr/bin/time -f ' bespoke: %M' $(WASMTIMEC_RUN) out/$(BENCHMARK)_bespoke.cwasm
+	/usr/bin/time -f 'asyncify: %M' $(WASMTIMEC_RUN) out/$(BENCHMARK)_asyncify.cwasm
+	/usr/bin/time -f '  wasmfx: %M' $(WASMFXTIMEC_RUN) out/$(BENCHMARK)_wasmfx.cwasm
 
 .PHONY: benchfx-mem
-benchfx-mem: $(BENCHMARK)_asyncify.cwasm $(BENCHMARK)_wasmfx.cwasm
-	/usr/bin/time -f 'asyncify: %M' $(WASMTIMEC_RUN) $(BENCHMARK)_asyncify.cwasm
-	/usr/bin/time -f '  wasmfx: %M' $(WASMFXTIMEC_RUN) $(BENCHMARK)_wasmfx.cwasm
+benchfx-mem: out/$(BENCHMARK)_asyncify.cwasm out/$(BENCHMARK)_wasmfx.cwasm
+	/usr/bin/time -f 'asyncify: %M' $(WASMTIMEC_RUN) out/$(BENCHMARK)_asyncify.cwasm
+	/usr/bin/time -f '  wasmfx: %M' $(WASMFXTIMEC_RUN) out/$(BENCHMARK)_wasmfx.cwasm
 
 .PHONY: grant-perf-privileges
 grant-perf-privileges:
@@ -55,11 +58,9 @@ revoke-perf-privileges:
 	sudo sysctl -w kernel.perf_event_paranoid=0
 
 .PHONY: perf-wasmfx
-perf-wasmfx: $(BENCHMARK)_wasmfx.cwasm
-	sudo perf record -k mono $(WASMFXTIMEC_RUN) --profile=perfmap $(BENCHMARK)_wasmfx.cwasm
+perf-wasmfx: out/$(BENCHMARK)_wasmfx.cwasm
+	sudo perf record -k mono $(WASMFXTIMEC_RUN) --profile=perfmap out/$(BENCHMARK)_wasmfx.cwasm
 
 .PHONY: clean
 clean:
-	rm -f wasmfx_import.wasm
-	rm -f $(BENCHMARK)_asyncify.pre.wasm $(BENCHMARK)_asyncify.wasm $(BENCHMARK)_bespoke.wasm $(BENCHMARK)_wasmfx.wasm $(BENCHMARK)_wasmfx-merged.wasm
-	rm -f $(BENCHMARK)_asyncify.cwasm $(BENCHMARK)_bespoke.cwasm $(BENCHMARK)_wasmfx.cwasm
+	test -d out && rm -r out || true
