--- a/make.config
+++ b/make.config
@@ -13,7 +13,7 @@ WABTFX_FLAGS=--enable-multimemory --enable-exception-handling --enable-reference
 
 ## Wasm optimiser
 WASM_OPT?=../binaryenfx/bin/wasm-opt
-WASM_OPT_FLAGS=--inlining-optimizing --inlining
+WASM_OPT_FLAGS=-O2
 WASMFX_OPT=$(WASM_OPT) $(WASM_OPT_FLAGS) $(WABTFX_FLAGS)
 
 
