fiber_adapter -> fiber_impl

--- a/make.generic.config
+++ b/make.generic.config
@@ -12,9 +12,9 @@ out/$(BENCHMARK)_bespoke.wasm: $(BENCHMARK)_bespoke.c
 out/$(BENCHMARK)_bespoke.cwasm: out/$(BENCHMARK)_bespoke.wasm
 	$(WASMTIMEC) -o out/$(BENCHMARK)_bespoke.cwasm out/$(BENCHMARK)_bespoke.wasm
 
-out/$(BENCHMARK)_asyncify.wasm: $(BENCHMARK).c fiber_adapter.c
+out/$(BENCHMARK)_asyncify.wasm: $(BENCHMARK).c fiber_impl.c
 	mkdir -p out
-	$(WASICC) $(WASICC_FLAGS) -I ../fiber/ -o out/$(BENCHMARK)_asyncify.pre.wasm ../fiber/fiber_asyncify.c fiber_adapter.c $(BENCHMARK).c
+	$(WASICC) $(WASICC_FLAGS) -I ../fiber/ -o out/$(BENCHMARK)_asyncify.pre.wasm ../fiber/fiber_asyncify.c fiber_impl.c $(BENCHMARK).c
 	$(ASYNCIFY) out/$(BENCHMARK)_asyncify.pre.wasm -o out/$(BENCHMARK)_asyncify.wasm
 
 out/$(BENCHMARK)_asyncify.cwasm: out/$(BENCHMARK)_asyncify.wasm
@@ -32,7 +32,7 @@ out/$(BENCHMARK)_wasmfx_fiber.wasm: $(BENCHMARK).c
 	# Custom flags to wasm-ld:
 	# --export-table: Exports the funcref table. This forces clang to populate it and not optimize it away
 	# --export-memory: Export the memory, so that the fiber_wasmfx_imports.wat can import it, creating one unified heap.
-	$(WASICC) $(WASICC_FLAGS) -Wl,--export-table,--export-memory -I ../fiber/ -o out/$(BENCHMARK)_wasmfx_fiber.pre.wasm  ../fiber/fiber_wasmfx.c fiber_adapter.c $(BENCHMARK).c
+	$(WASICC) $(WASICC_FLAGS) -Wl,--export-table,--export-memory -I ../fiber/ -o out/$(BENCHMARK)_wasmfx_fiber.pre.wasm  ../fiber/fiber_wasmfx.c fiber_impl.c $(BENCHMARK).c
 
 	# For debugging: create binaryen compatible wat for wasm
 	# $(WASMFX_DIS) out/$(BENCHMARK)_wasmfx_fiber.pre.wasm -o out/$(BENCHMARK)_wasmfx_fiber.pre.wat
