[shadow stack] support

--- a/make.config
+++ b/make.config
@@ -37,6 +37,9 @@ WASMTIME=../wasmtime/target/release/wasmtime
 WASMTIMEC=$(WASMTIME) compile
 WASMTIMEC_RUN=LD_PRELOAD=$(MIMALLOC) $(WASMTIME) --allow-precompiled -Wwasmfx-stack-size=$(DEFAULT_STACK_SIZE) -Wwasmfx-red-zone-size=0
 
+# wasm tools
+WASMTOOLS=../wasm-tools/target/debug/wasm-tools
+
 # WasmFX enabled Wasmtime engine
 WASMTIMEFX_FLAGS=-W=exceptions,function-references,typed-continuations
 WASMFXTIMEC=$(WASMTIMEC) $(WASMTIMEFX_FLAGS)
