--- a/make.generic.config
+++ b/make.generic.config
@@ -34,14 +34,16 @@ out/$(BENCHMARK)_wasmfx_fiber.wasm: $(BENCHMARK).c
 	# --export-memory: Export the memory, so that the fiber_wasmfx_imports.wat can import it, creating one unified heap.
 	$(WASICC) $(WASICC_FLAGS) -Wl,--export-table,--export-memory -I ../fiber/ -o out/$(BENCHMARK)_wasmfx_fiber.pre.wasm  ../fiber/fiber_wasmfx.c fiber_impl.c $(BENCHMARK).c
 
-	# For debugging: create binaryen compatible wat for wasm
-	# $(WASMFX_DIS) out/$(BENCHMARK)_wasmfx_fiber.pre.wasm -o out/$(BENCHMARK)_wasmfx_fiber.pre.wat
 
-	$(WASM_INTERP) -d -i ../fiber/fiber_wasmfx_imports.wat -o out/fiber_wasmfx_imports.wasm
-	$(WASMFX_MERGE) out/fiber_wasmfx_imports.wasm "fiber_wasmfx_imports" out/$(BENCHMARK)_wasmfx_fiber.pre.wasm "benchmark" -o out/$(BENCHMARK)_wasmfx.merged.wasm
+	$(WASMFX_DIS) out/$(BENCHMARK)_wasmfx_fiber.pre.wasm -o out/$(BENCHMARK)_wasmfx_fiber.pre.wat
+	# Export stack pointer global as __exported_shadow_stack_pointer
+	bash ../fix_stack_ptr.sh out/$(BENCHMARK)_wasmfx_fiber.pre.wat out/$(BENCHMARK)_wasmfx_fiber.pre_patched.wat
+
+	$(WASMTOOLS) parse -o out/fiber_wasmfx_imports.wasm ../fiber/fiber_wasmfx_imports.wat
+	$(WASMFX_MERGE) out/fiber_wasmfx_imports.wasm "fiber_wasmfx_imports" out/$(BENCHMARK)_wasmfx_fiber.pre_patched.wat "benchmark" -o out/$(BENCHMARK)_wasmfx.merged.wasm
 
 	# for debugging: create binaryen compatible wat for wasm
-	# $(WASMFX_DIS) out/$(BENCHMARK)_wasmfx.merged.wasm -o out/$(BENCHMARK)_wasmfx.merged.wat
+	$(WASMFX_DIS) out/$(BENCHMARK)_wasmfx.merged.wasm -o out/$(BENCHMARK)_wasmfx.merged.wat
 
 	# for debugging: create ref interpreter compatible wat for wasm
 	# $(WASM_INTERP) -d -i out/$(BENCHMARK)_wasmfx.merged.wasm -o out/$(BENCHMARK)_wasmfx.merged.refint.wat
