vendor fiber-c external library instead of shipping our own

--- a/make.config
+++ b/make.config
@@ -1,5 +1,6 @@
 # Default stack size
 DEFAULT_STACK_SIZE=4096
+WASMFX_CONT_TABLE_INITIAL_CAPACITY?=1024
 
 # Mimalloc (drop-in replacement for malloc)
 MIMALLOC=../mimalloc-2.1.2/release/out/libmimalloc.so
