--- a/make.generic.config
+++ b/make.generic.config
@@ -14,7 +14,7 @@ out/$(BENCHMARK)_bespoke.cwasm: out/$(BENCHMARK)_bespoke.wasm
 
 out/$(BENCHMARK)_asyncify.wasm: $(BENCHMARK).c fiber_impl.c
 	mkdir -p out
-	$(WASICC) $(WASICC_FLAGS) -I ../fiber/ -o out/$(BENCHMARK)_asyncify.pre.wasm ../fiber/fiber_asyncify.c fiber_impl.c $(BENCHMARK).c
+	$(WASICC) $(WASICC_FLAGS) -I ../vendor/fiber-c/inc -o out/$(BENCHMARK)_asyncify.pre.wasm ../vendor/fiber-c/src/asyncify/asyncify_impl.c fiber_impl.c $(BENCHMARK).c
 	$(ASYNCIFY) out/$(BENCHMARK)_asyncify.pre.wasm -o out/$(BENCHMARK)_asyncify.wasm
 
 out/$(BENCHMARK)_asyncify.cwasm: out/$(BENCHMARK)_asyncify.wasm
@@ -22,22 +22,27 @@ out/$(BENCHMARK)_asyncify.cwasm: out/$(BENCHMARK)_asyncify.wasm
 
 out/$(BENCHMARK)_wasmfx.wasm: $(BENCHMARK).c wasmfx_import.wast
 	mkdir -p out
-	$(WASICC) $(WASICC_FLAGS) -I ../fiber/ -o out/$(BENCHMARK)_wasmfx.pre.wasm ../fiber/fiber_wasmfx_compat.c $(BENCHMARK).c
+	$(WASICC) $(WASICC_FLAGS) -I  ../vendor/fiber-c/inc -o out/$(BENCHMARK)_wasmfx.pre.wasm ../fiber_wasmfx_compat.c $(BENCHMARK).c
 	$(WASM_INTERP) -d -i wasmfx_import.wast -o out/wasmfx_import.wasm
 	$(WASMFX_MERGE) out/wasmfx_import.wasm "impl" out/$(BENCHMARK)_wasmfx.pre.wasm "benchmark" -o out/$(BENCHMARK)_wasmfx-merged.wasm
 	mv out/$(BENCHMARK)_wasmfx-merged.wasm out/$(BENCHMARK)_wasmfx.wasm # TODO(dhil): use wasm-opt once it supports WasmFX instructions.
 
-out/$(BENCHMARK)_wasmfx_fiber.wasm: $(BENCHMARK).c
+out/wasmfx_fiber_imports.wat: ../vendor/fiber-c/src/wasmfx/imports.wat.pp
+	mkdir -p out
+	$(WASICC) -xc -DWASMFX_CONT_TABLE_INITIAL_CAPACITY=$(WASMFX_CONT_TABLE_INITIAL_CAPACITY) -E ../vendor/fiber-c/src/wasmfx/imports.wat.pp | tail -n+8 > out/wasmfx_fiber_imports.wat
+
+out/$(BENCHMARK)_wasmfx_fiber.wasm: out/wasmfx_fiber_imports.wat $(BENCHMARK).c
 	mkdir -p out
 	# Custom flags to wasm-ld:
 	# --export-table: Exports the funcref table. This forces clang to populate it and not optimize it away
 	# --export-memory: Export the memory, so that the fiber_wasmfx_imports.wat can import it, creating one unified heap.
-	$(WASICC) $(WASICC_FLAGS) -Wl,--export-table,--export-memory -I ../fiber/ -o out/$(BENCHMARK)_wasmfx_fiber.pre.wasm  ../fiber/fiber_wasmfx.c fiber_impl.c $(BENCHMARK).c
+	$(WASICC) $(WASICC_FLAGS) -Wl,--export-table,--export-memory -DWASMFX_CONT_TABLE_INITIAL_CAPACITY=$(WASMFX_CONT_TABLE_INITIAL_CAPACITY) \
+		-I ../vendor/fiber-c/inc -o out/$(BENCHMARK)_wasmfx_fiber.pre.wasm  ../vendor/fiber-c/src/wasmfx/wasmfx_impl.c fiber_impl.c $(BENCHMARK).c
 
 	# For debugging: create binaryen compatible wat for wasm
 	# $(WASMFX_DIS) out/$(BENCHMARK)_wasmfx_fiber.pre.wasm -o out/$(BENCHMARK)_wasmfx_fiber.pre.wat
 
-	$(WASM_INTERP) -d -i ../fiber/fiber_wasmfx_imports.wat -o out/fiber_wasmfx_imports.wasm
+	$(WASM_INTERP) -d -i out/wasmfx_fiber_imports.wat -o out/fiber_wasmfx_imports.wasm
 	$(WASMFX_MERGE) out/fiber_wasmfx_imports.wasm "fiber_wasmfx_imports" out/$(BENCHMARK)_wasmfx_fiber.pre.wasm "benchmark" -o out/$(BENCHMARK)_wasmfx.merged.wasm
 
 	# for debugging: create binaryen compatible wat for wasm
