--- a/make.generic.config
+++ b/make.generic.config
@@ -43,7 +43,7 @@ out/$(BENCHMARK)_wasmfx_fiber.wasm: out/wasmfx_fiber_imports.wat $(BENCHMARK).c
 	# $(WASMFX_DIS) out/$(BENCHMARK)_wasmfx_fiber.pre.wasm -o out/$(BENCHMARK)_wasmfx_fiber.pre.wat
 
 	$(WASM_INTERP) -d -i out/wasmfx_fiber_imports.wat -o out/fiber_wasmfx_imports.wasm
-	$(WASMFX_MERGE) out/fiber_wasmfx_imports.wasm "fiber_wasmfx_imports" out/$(BENCHMARK)_wasmfx_fiber.pre.wasm "benchmark" -o out/$(BENCHMARK)_wasmfx.merged.wasm
+	$(WASMFX_MERGE) out/fiber_wasmfx_imports.wasm "fiber_wasmfx_imports" out/$(BENCHMARK)_wasmfx_fiber.pre.wasm "main" -o out/$(BENCHMARK)_wasmfx.merged.wasm
 
 	# for debugging: create binaryen compatible wat for wasm
 	# $(WASMFX_DIS) out/$(BENCHMARK)_wasmfx.merged.wasm -o out/$(BENCHMARK)_wasmfx.merged.wat
