--- a/make.config
+++ b/make.config
@@ -1,5 +1,5 @@
 # Default stack size
-DEFAULT_STACK_SIZE=4096
+ASYNCIFY_DEFAULT_STACK_SIZE?=2097152
 WASMFX_CONT_TABLE_INITIAL_CAPACITY?=1024
 
 # Mimalloc (drop-in replacement for malloc)
@@ -7,7 +7,7 @@ MIMALLOC=../mimalloc-2.1.2/release/out/libmimalloc.so
 
 # WASI SDK C/C++ compiler
 WASICC?=../wasi-sdk-22.0/bin/clang
-WASICC_FLAGS=--std=c17 -O3 -Wall -Wextra -Werror -DDEFAULT_STACK_SIZE=$(DEFAULT_STACK_SIZE)
+WASICC_FLAGS=--std=c17 -O3 -Wall -Wextra -Werror -DASYNCIFY_DEFAULT_STACK_SIZE=$(ASYNCIFY_DEFAULT_STACK_SIZE)
 
 # Wabt
 WABTFX_FLAGS=--enable-multimemory --enable-exception-handling --enable-reference-types --enable-multivalue --enable-bulk-memory --enable-gc --enable-typed-continuations
