be more consistent about "benchmark" vs "main"

--- a/make.generic.config
+++ b/make.generic.config
@@ -24,7 +24,7 @@ out/$(BENCHMARK)_wasmfx.wasm: $(BENCHMARK).c wasmfx_import.wast
 	mkdir -p out
 	$(WASICC) $(WASICC_FLAGS) -I  ../vendor/fiber-c/inc -o out/$(BENCHMARK)_wasmfx.pre.wasm ../fiber_wasmfx_compat.c $(BENCHMARK).c
 	$(WASM_INTERP) -d -i wasmfx_import.wast -o out/wasmfx_import.wasm
-	$(WASMFX_MERGE) out/wasmfx_import.wasm "impl" out/$(BENCHMARK)_wasmfx.pre.wasm "benchmark" -o out/$(BENCHMARK)_wasmfx-merged.wasm
+	$(WASMFX_MERGE) out/wasmfx_import.wasm "impl" out/$(BENCHMARK)_wasmfx.pre.wasm "main" -o out/$(BENCHMARK)_wasmfx-merged.wasm
 	mv out/$(BENCHMARK)_wasmfx-merged.wasm out/$(BENCHMARK)_wasmfx.wasm # TODO(dhil): use wasm-opt once it supports WasmFX instructions.
 
 out/wasmfx_fiber_imports.wat: ../vendor/fiber-c/src/wasmfx/imports.wat.pp
