Resume table syntax

--- a/make.config
+++ b/make.config
@@ -1,5 +1,6 @@
 # Default stack size
-ASYNCIFY_DEFAULT_STACK_SIZE?=2097152
+DEFAULT_STACK_SIZE?=2097152
+ASYNCIFY_DEFAULT_STACK_SIZE?=$(DEFAULT_STACK_SIZE)
 WASMFX_CONT_TABLE_INITIAL_CAPACITY?=1024
 
 # Mimalloc (drop-in replacement for malloc)
